// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanExpression allows a & b | c – boolean logic for courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$and": Array [
        Object {
          "$course": Object {
            "number": "121",
            "subject": "CSCI",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "122",
            "subject": "CSCI",
          },
          "$type": "course",
        },
      ],
      "$booleanType": "and",
      "$type": "boolean",
    },
    Object {
      "$course": Object {
        "number": "123",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows a | b & c – boolean logic for courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$and": Array [
        Object {
          "$course": Object {
            "number": "122",
            "subject": "CSCI",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "123",
            "subject": "CSCI",
          },
          "$type": "course",
        },
      ],
      "$booleanType": "and",
      "$type": "boolean",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows several &-d courses in a row 1`] = `
Object {
  "$and": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "126",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "123",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows several |-d courses in a row 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "126",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "123",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression changes departments when given a new one 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "PSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression keeps duplicates in a list of courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses separated by & as being and-d 1`] = `
Object {
  "$and": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses separated by | as being or-d 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses with no departments after an prior department 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "number": "125",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression supports parentheses to control order-of-operations - (a | b) & c 1`] = `
Object {
  "$and": Array [
    Object {
      "$booleanType": "or",
      "$or": Array [
        Object {
          "$course": Object {
            "number": "121",
            "subject": "CSCI",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "122",
            "subject": "CSCI",
          },
          "$type": "course",
        },
      ],
      "$type": "boolean",
    },
    Object {
      "$course": Object {
        "number": "123",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;
